force-app/main/default/objects/ssot__VehicleTripDriverBehavior__dlm/fields/ssot__AssetOperationStyle__c.field-meta.xml
<CustomField>
    <fullName>ssot__AssetOperationStyle__c</fullName>
    <label>Asset Operation Style</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>AssetOperationStyle</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>