force-app/main/default/objects/ssot__VehicleTripDriverBehavior__dlm/fields/ssot__BrakingStyle__c.field-meta.xml
<CustomField>
    <fullName>ssot__BrakingStyle__c</fullName>
    <label>Braking Style</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>BrakingStyle</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>