force-app/main/default/objects/ssot__VehicleTripDriverBehavior__dlm/fields/ssot__CollisionCount__c.field-meta.xml
<CustomField>
    <fullName>ssot__CollisionCount__c</fullName>
    <label>Collision Count</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>CollisionCount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>