force-app/main/default/objects/ssot__VehicleTripDriverBehavior__dlm/fields/ssot__HasGeofenceCrossed__c.field-meta.xml
<CustomField>
    <fullName>ssot__HasGeofenceCrossed__c</fullName>
    <label>Geofence Crossed</label>
    <length>5</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>HasGeofenceCrossed</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>