force-app/main/default/objects/ssot__VehicleTripDriverBehavior__dlm/fields/ssot__MaximumEngineRPMNumber__c.field-meta.xml
<CustomField>
    <fullName>ssot__MaximumEngineRPMNumber__c</fullName>
    <label>Maximum Engine RPM</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>MaximumEngineRPMNumber</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>