force-app/main/default/objects/ssot__VehicleTripDriverBehavior__dlm/fields/ssot__rel_1697761234185_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1697761234185_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>VehicleTripDriverBehavior_VehicleTri_rel</label>
    <referenceTo>ssot__VehicleTrip__dlm</referenceTo>
    <relationshipLabel>VehicleTripDriverBehavior_VehicleTri_rel</relationshipLabel>
    <relationshipName>rel_1697761234185_end</relationshipName>
    <type>Lookup</type>
</CustomField>